# MinerU-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/mineru/: Cargo.toml
crates/mineru-backend-hybrid/: Cargo.toml
crates/mineru-backend-hybrid/src/: analyze.rs  assemble.rs  effort.rs  error.rs  label_map.rs  lib.rs
crates/mineru-backend-pipeline/: Cargo.toml
crates/mineru-backend-pipeline/src/: analyze.rs  assemble.rs  error.rs  lib.rs  models.rs  para.rs
crates/mineru-backend-pipeline/tests/: rotation_probe.rs
crates/mineru-backend-vlm/: Cargo.toml
crates/mineru-backend-vlm/src/: error.rs  lib.rs
crates/mineru-burn-common/: Cargo.toml
crates/mineru-burn-common/src/: backend.rs  ctc.rs  error.rs  geometry.rs  host.rs  lib.rs  model.rs  nn.rs  preprocess.rs  weights.rs
crates/mineru-config/: Cargo.toml
crates/mineru-config/src/: config.rs  device.rs  download.rs  error.rs  lib.rs  model_source.rs
crates/mineru-formula/: Cargo.toml
crates/mineru-formula/src/: config.rs  error.rs  generate.rs  latex_cleanup.rs  lib.rs  model.rs  preprocess.rs  tokenizer.rs  weights.rs
crates/mineru-formula/src/mbart/: attention.rs  layer.rs  mod.rs
crates/mineru-formula/src/swin/: attention.rs  embeddings.rs  layer.rs  mod.rs
crates/mineru-formula/tests/: decode_profile.rs  gemm_direct.rs  gpu_parity.rs  gpu_profile.rs  op_profile.rs  overhead_probe.rs  parity.rs  pipeline.rs  real_weights.rs  step_breakdown.rs
crates/mineru-formula/tests/reference/: .gitignore  py_ref_formula.py
crates/mineru-io/: Cargo.toml
crates/mineru-io/src/: data.rs  download.rs  error.rs  image_crop.rs  layout.rs  lib.rs
crates/mineru-layout/: Cargo.toml
crates/mineru-layout/src/: backbone.rs  config.rs  decoder.rs  detection.rs  encoder.rs  error.rs  label.rs  lib.rs  model.rs  nn.rs  postprocess.rs  preprocess.rs  reading_order.rs  weights.rs
crates/mineru-layout/tests/: parity.rs  real_weights.rs  wgpu_check.rs
crates/mineru-layout/tests/reference/: .gitignore  py_ref_layout.py
crates/mineru-ocr-det/: Cargo.toml
crates/mineru-ocr-det/src/: backbone.rs  error.rs  head.rs  lib.rs  model.rs  neck.rs  postprocess.rs  weights.rs
crates/mineru-ocr-det/tests/: parity.rs  real_inference.rs  real_weights.rs
crates/mineru-ocr-det/tests/reference/: py_ref_det.py
crates/mineru-ocr-rec/: Cargo.toml
crates/mineru-ocr-rec/src/: backbone.rs  dict.rs  error.rs  head.rs  lib.rs  model.rs  neck.rs
crates/mineru-ocr-rec/tests/: parity.rs  real_inference.rs  real_weights.rs
crates/mineru-ocr-rec/tests/reference/: .gitignore  py_ref_rec.py
crates/mineru-pdf/: Cargo.toml
crates/mineru-pdf/src/: download.rs  error.rs  lib.rs  text.rs
crates/mineru-render/: Cargo.toml
crates/mineru-render/src/: content_list.rs  error.rs  lib.rs  markdown.rs  mode.rs  path.rs  text.rs
crates/mineru-render/tests/: roundtrip.rs
crates/mineru-table/: Cargo.toml  build.rs
crates/mineru-table/src/: cls.rs  error.rs  inline.rs  lib.rs  matching.rs  model_cache.rs  ocr.rs  orientation.rs  resample.rs  select.rs  weights.rs
crates/mineru-table/src/slanet/: backbone.rs  decode.rs  head.rs  mod.rs  model.rs  preprocess.rs  vocab.rs
crates/mineru-table/src/unet/: extract.rs  mod.rs  model.rs  postprocess.rs  recover.rs
crates/mineru-table/tests/: lcnet_real.rs  real_models.rs  recover_probe.rs  slanet_real.rs  table_rows_probe.rs  unet_mask_probe.rs  unet_real.rs
crates/mineru-table/tests/reference/: convert_slanet_weights.py  py_ref_lcnet.py  py_ref_slanet.py  py_ref_unet.py
crates/mineru-types/: Cargo.toml
crates/mineru-types/src/: backend.rs  content.rs  document.rs  error.rs  geom.rs  image_sink.rs  lib.rs
crates/mineru-types/tests/: document_roundtrip.rs
crates/mineru-vlm-client/: Cargo.toml
crates/mineru-vlm-client/src/: assemble.rs  client.rs  error.rs  lib.rs  parse.rs  prompts.rs  raw.rs
crates/mineru/src/: backend.rs  cli.rs  engine.rs  lib.rs  main.rs  run.rs  serve.rs
