[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
# Inherited from upstream MinerU (Apache-2.0 plus additional terms), which this
# is a port of. See LICENSE.md in opendatalab/MinerU for the full text.
license = "LicenseRef-MinerU-Open-Source-License"
# This port's own repository. Upstream MinerU lives at opendatalab/MinerU and is
# credited in the README.
repository = "https://github.com/PoHsuanLai/MinerU-rs"

[workspace.dependencies]
# Internal crates
mineru-types = { path = "crates/mineru-types" }
mineru-config = { path = "crates/mineru-config" }
mineru-vlm-client = { path = "crates/mineru-vlm-client" }
mineru-io = { path = "crates/mineru-io" }
mineru-pdf = { path = "crates/mineru-pdf" }
mineru-render = { path = "crates/mineru-render" }
mineru-ocr-det = { path = "crates/mineru-ocr-det" }
mineru-ocr-rec = { path = "crates/mineru-ocr-rec" }
mineru-table = { path = "crates/mineru-table" }
mineru-burn-common = { path = "crates/mineru-burn-common" }
mineru-formula = { path = "crates/mineru-formula" }
mineru-layout = { path = "crates/mineru-layout" }
mineru-backend-pipeline = { path = "crates/mineru-backend-pipeline" }
mineru-backend-vlm = { path = "crates/mineru-backend-vlm" }
mineru-backend-hybrid = { path = "crates/mineru-backend-hybrid" }

# Shared external deps (pin versions once, reuse everywhere — DRY)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
burn = { version = "0.21", default-features = false }
# burn-store: PyTorch/safetensors/burnpack readers + key remapping. Used directly
# by mineru-burn-common (weight loading) and by mineru-table's burn-onnx-generated
# code (which `use burn_store::BurnpackStore`).
burn-store = { version = "0.21", default-features = false, features = ["std", "pytorch", "safetensors"] }

[profile.release]
lto = "thin"
