[package]
name = "mineru-backend-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local Burn-model pipeline backend for MinerU: orchestrates layout, OCR, formula, and table crates into a Document (the Rust analogue of pipeline_analyze.py + pipeline_magic_model.py + para_split.py)."

[dependencies]
mineru-types = { workspace = true }
mineru-pdf = { workspace = true }
mineru-layout = { workspace = true }
mineru-ocr-det = { workspace = true }
mineru-ocr-rec = { workspace = true }
mineru-formula = { workspace = true }
mineru-table = { workspace = true }
mineru-burn-common = { workspace = true }

# Burn is needed only for its `Backend` trait bound on the generic
# `PipelineBackend<B>`/`PipelineModels<B>`; the model crates carry the actual
# backend implementations. `ndarray` for the default CPU backend.
burn = { workspace = true, features = ["ndarray"] }

image = { version = "0.25", default-features = false }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# Opt-in GPU (wgpu) backend for the neural stages (layout/OCR/formula); tables
# stay on CPU. Forwards to burn and every GPU-capable model crate so a caller can
# instantiate `PipelineBackend::<mineru_burn_common::Gpu>`.
gpu = [
    "burn/wgpu",
    "mineru-burn-common/gpu",
    "mineru-layout/gpu",
    "mineru-ocr-det/gpu",
    "mineru-ocr-rec/gpu",
    "mineru-formula/gpu",
]
