[package]
name = "mineru-burn-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Burn harness for MinerU model crates: backends, weight loading, preprocessing, and decode helpers."

[dependencies]
# Burn core. The `autodiff` machinery is not needed for inference, so we stay on
# default-features = false + explicit feature selection to keep the dependency
# surface small.
burn = { workspace = true }
# The CPU backend, depended on directly so its defaults (simd + rayon) apply; see
# the workspace manifest.
burn-flex = { workspace = true }
# burn-store carries the PyTorch / safetensors readers plus key remapping and the
# ApplyResult report we build the "all keys consumed" assertion on top of.
burn-store = { workspace = true }
image = { version = "0.25", default-features = false }
regex = "1"
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
# Opt-in GPU backend. Enabling this pulls in the wgpu backend and exposes the
# `gpu` backend alias; it is never required for CPU inference or the test suite.
gpu = ["burn/wgpu"]
# Opt-in Apple AMX matmul kernels for the CPU backend. Replaces the old
# `accelerate` feature, which drove `burn-ndarray`'s BLAS hook and became
# meaningless when matmul moved to flex's `gemm`. Upstream marks this
# experimental, so it is not a default. Apple Silicon only.
apple-amx = ["burn-flex/apple-amx"]

[dev-dependencies]
image = { version = "0.25", default-features = false }
