[package]
name = "mineru-burn-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Burn harness for MinerU model crates: backends, weight loading, preprocessing, and decode helpers."

[dependencies]
# Burn core. The `autodiff` machinery is not needed for inference, so we stay on
# default-features = false + explicit feature selection to keep the dependency
# surface small.
burn = { workspace = true }
# The CPU backend, depended on directly so its defaults (simd + rayon) apply; see
# the workspace manifest.
burn-flex = { workspace = true }
# burn-store carries the PyTorch / safetensors readers plus key remapping and the
# ApplyResult report we build the "all keys consumed" assertion on top of.
burn-store = { workspace = true }
image = { version = "0.25", default-features = false }
regex = "1"
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
# Opt-in GPU backend. Enabling this pulls in the wgpu backend and exposes the
# `gpu` backend alias; it is never required for CPU inference or the test suite.
#
# `autotune` and `fusion` are DEFAULT features of `burn-wgpu`, but the workspace
# pins `burn` with `default-features = false` (to drop autodiff), which strips
# them. We re-enable ONLY `autotune`: it picks the correct/fast matmul kernel and
# on the demo1 pipeline cut GPU wall-clock 61.6s -> 43.9s (1.4x), output
# byte-identical. It also FIXES the M>=512 & K>=512 silent-wrong-result matmul bug
# (verified: the standalone repro is exact with autotune on), so the
# `nn::linear_tiled` tiling workaround is no longer needed with this feature on.
#
# `fusion` is deliberately NOT enabled. It makes `burn::backend::Wgpu` resolve to
# `Fusion<CubeBackend<..>>` and helps a tight fixed-shape loop, but on the real
# pipeline (every page/crop a different shape) it REGRESSED wall-clock ~3x
# (43.9s -> ~187s) — the fused-kernel JIT never amortizes across the shape
# diversity. Measured 2026-07-18; do not re-add fusion without re-measuring the
# full pipeline, not just an isolated op.
gpu = ["burn/wgpu", "burn/autotune"]
# Opt-in Apple AMX matmul kernels, via `burn-flex` -> `gemm`. Replaces the old
# `accelerate` feature, which drove `burn-ndarray`'s BLAS hook and became
# meaningless when matmul moved to flex's `gemm`.
#
# **A no-op on M4 and newer.** `gemm`'s runtime probe hardcodes a model list —
# `matches!(mx, Some("M1" | "M2" | "M3"))`, gemm-common-0.19.0/src/cache.rs:53 —
# so on an M4 it parses the brand string, fails the match, and dispatches NEON
# regardless. Enabling this compiles the AMX kernels in and never calls them:
# measured 60.3 vs 59.0 ms/token on an M4 Pro, i.e. nothing beyond run-to-run
# noise. Kept because it is correct on M1-M3 and costs nothing when unused, but
# do not expect it to do anything here until gemm's probe learns newer chips.
apple-amx = ["burn-flex/apple-amx"]

[dev-dependencies]
image = { version = "0.25", default-features = false }
