[package]
name = "mineru-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "User configuration for MinerU (device, model source, model cache dir)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs = "5"
