[package]
name = "mineru-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "User configuration for MinerU (device, model source, model cache dir)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs = "5"
# Pure-Rust synchronous HTTP client, used by `src/download.rs` to fetch pipeline
# model weight files from a GitHub release on first use. Same 2.x line already in
# the workspace (mineru-pdf, mineru-table, hf-hub -> ureq).
ureq = "2.12"
