[package]
name = "mineru-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem reader/writer abstraction and model-weight download helper for MinerU."

[dependencies]
thiserror.workspace = true
# Sync (ureq-backed) Hugging Face Hub client. The default `online` feature pulls
# in ureq + native-tls only — no async runtime — which keeps the dependency tree
# light and avoids a hard tokio dependency in this crate.
hf-hub = "0.3"

[dev-dependencies]
tempfile = "3"
