[package]
name = "mineru-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Renders the parsed MinerU document tree to Markdown and to a Python-compatible content_list JSON."

[dependencies]
mineru-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
