[package]
name = "mineru-table"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Table recognition for MinerU: wired/wireless classification (PP-LCNet), wireless structure recognition (SLANet-plus), and wired line recovery (UNet), ported to Burn with no onnxruntime dependency."

[dependencies]
mineru-types = { workspace = true }
# Shared Burn harness: weight loading (safetensors/pth via burn-store) and the
# PyTorch-layout NN primitives the hand-ported SLANet-plus model reuses.
mineru-burn-common = { workspace = true }
# Burn core with the ndarray CPU backend, mirroring mineru-burn-common so both
# crates agree on the backend and no GPU toolchain is required.
burn = { workspace = true, features = ["ndarray"] }
image = { version = "0.25", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
# The vendored burn-onnx-generated modules (`src/generated/{lcnet,unet}.rs`)
# `use burn_store::{BurnpackStore, ModuleSnapshot}` to load their `.bpk` weights,
# and the runtime loader (`src/weights.rs`) drives the same store. Both are
# always compiled now (the models are no longer feature-gated), so burn-store
# (with the `burnpack` reader) is a plain, non-optional dependency.
burn-store = { workspace = true, features = ["burnpack"] }
# Pure-Rust synchronous HTTP client, used by `src/weights.rs` to fetch the two
# model `.bpk` weight files from the public GitHub release on first use. Already
# present transitively (hf-hub -> ureq); pinned here to that same 2.x line.
ureq = "2.12"
# SHA-256, used by `src/weights.rs` to verify a freshly downloaded weight file
# against the release-published digest. Already present transitively
# (burn-store -> zip -> lzma-rust2 -> sha2), so this adds no new crate.
sha2 = "0.11"

[features]
default = []
# Opt-in GPU backend, forwarded to burn.
gpu = ["burn/wgpu"]

[dev-dependencies]
image = { version = "0.25", default-features = false }
