[package]
name = "mineru-vlm-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible VLM client for MinerU: talks to a Qwen2-VL server and maps its output into the document tree."

[dependencies]
mineru-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-openai = { version = "0.29", features = ["byot"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
