[package]
name = "mineru"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MinerU document parser: an umbrella crate re-exporting the workspace's thin crates (types, models, backends) behind feature flags, plus the `mineru` command-line tool."

# Library facade: re-exports the sub-crates under one module tree. Downstream
# users can `mineru::types::BBox` / `mineru::layout::LayoutModel`, or still
# `cargo add mineru-layout` for a single crate.
[lib]
name = "mineru"
path = "src/lib.rs"

# The command-line tool, built on top of the facade. Needs the `cli` feature
# (which pulls both backends); `required-features` keeps a `--no-default-features`
# library build from trying to compile the binary.
[[bin]]
name = "mineru"
path = "src/main.rs"
required-features = ["cli"]

[features]
# The bin needs every backend selectable at runtime, plus the CLI deps.
# `hybrid` implies `pipeline` + `vlm` and adds no further model deps, so making
# `-b hybrid` work out of the box costs only the hybrid crate itself.
default = ["cli"]
cli = ["pipeline", "vlm", "hybrid", "dep:clap", "dep:tokio", "dep:anyhow", "dep:tracing-subscriber"]

# Fully-local Burn pipeline backend + every model it composes.
pipeline = [
    "burn-common", "ocr", "layout", "table", "formula",
    "dep:mineru-backend-pipeline",
]
# External OpenAI-compatible VLM backend + its client.
vlm = ["dep:mineru-vlm-client", "dep:mineru-backend-vlm"]
# Hybrid backend: pipeline layout drives per-region VLM extraction (needs both).
hybrid = ["pipeline", "vlm", "dep:mineru-backend-hybrid"]

# Opt-in GPU (wgpu) backend for the pipeline's neural stages (layout/OCR/formula);
# tables stay on CPU. Selected at runtime via `MINERU_GPU=1`. Forwards the GPU
# feature to the pipeline crate and the shared harness (for the `Gpu` alias).
gpu = ["pipeline", "mineru-backend-pipeline/gpu", "mineru-burn-common/gpu"]

# Opt-in Apple AMX matmul kernels for the CPU backend. Unlike `gpu` this needs no
# per-model plumbing: it swaps the matmul kernels underneath the shared CPU
# backend, which every stage already uses. M1-M3 only — `gemm`'s runtime probe
# does not recognize M4+, so this is a measured no-op there; see the feature's
# comment in `mineru-burn-common/Cargo.toml`.
apple-amx = ["burn-common", "mineru-burn-common/apple-amx"]

# Individual model crates, so a downstream user can pull just one.
burn-common = ["dep:mineru-burn-common"]
ocr = ["dep:mineru-ocr-det", "dep:mineru-ocr-rec", "burn-common"]
layout = ["dep:mineru-layout", "burn-common"]
table = ["dep:mineru-table", "burn-common"]
formula = ["dep:mineru-formula", "burn-common"]

[dependencies]
# Foundation — always re-exported (lightweight, no Burn/pdfium-heavy graph
# beyond pdfium in mineru-pdf, which the parser genuinely needs).
mineru-types = { workspace = true }
mineru-config = { workspace = true }
mineru-io = { workspace = true }
mineru-pdf = { workspace = true }
mineru-render = { workspace = true }

# The facade's `Mineru` implements the object-safe `Backend` trait by delegation,
# which uses `async-trait` (native async-fn-in-trait is not yet object-safe).
async-trait = { workspace = true }
thiserror = { workspace = true }

# Model + backend crates — optional, gated by the features above.
mineru-burn-common = { workspace = true, optional = true }
mineru-ocr-det = { workspace = true, optional = true }
mineru-ocr-rec = { workspace = true, optional = true }
mineru-layout = { workspace = true, optional = true }
mineru-table = { workspace = true, optional = true }
mineru-formula = { workspace = true, optional = true }
mineru-backend-pipeline = { workspace = true, optional = true }
mineru-vlm-client = { workspace = true, optional = true }
mineru-backend-vlm = { workspace = true, optional = true }
mineru-backend-hybrid = { workspace = true, optional = true }

# Binary-only deps — optional, pulled in by the `cli` feature.
clap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
serde_json = { workspace = true }
